2001-04-03 Joseph Wenninger <jowenn@bigfoot.com>
	* Cristi Dumitrescu's PHP keyword / type list added

2001-04-01 Joseph Wenninger <jowenn@bigfoot.com>
         * Added a new widget KateStackTabWidget
           Now you can chose between tabbed or an
           KOffice Workspace like view for the file sidebar
	   --> You can change this behaviour in the config dialog
         * Not implemented:
              restore sidebar page  on startup
              remove page not implemented yet
           (will be fixed soon)
        ---------------------------------------------
        * Added a backport of QT3's QRegExp I got from Scott Manson
          wit one addtion (see qt3back/README)
                hopefully this will give us more flexibility for syntax
                highlighting
           
2001-03-27 Christoph Cullmann <crossfire@babylon2k.de>
             * console disabled per default
             * console only loaded if enabled

2001-03-28 Joseph Wenninger <jowenn@bigfoot.com>
	* -n in kate.desktop removed, now config settings are used

2001-03-27 Christoph Cullmann <crossfire@babylon2k.de>
        * interfaces extended (mainly for projectmanager)
        * piper moved to plugins/projectmanager/piper
        * a piper Makefile.am created 

2001-03-26 Joseph Wenninger <jowenn@bigfoot.com>
        * 2 reimplemented highlighing configs
	* 1 experimental highlighting config
        * preparations for an highlighting editing dialog

2001-03-25 Christoph Cullmann <crossfire@babylon2k.de>
        * rewrite of plugin API and manager, now loading/unloading nice

2001-03-22 Joseph Wenninger <jowenn@bigfoot.com>
        * single / multi instance mode configurable
          Cullmann's -n option forces a new instance
          Otherwise it uses the configuration from
          the settings dialog. At the moment -n is
          default start option

2001-03-21 Christoph Cullmann <crossfire@babylon2k.de>
        * QPopupMenu for filelist
