@@ -135,9 +135,8 @@ void KateMainWindow::setupMainWindow ()
   fileselector->dirOperator()->setView(KFile::Simple);
   sidebar->addWidget (fileselector, i18n("Fileselector"));
   connect(fileselector->dirOperator(),SIGNAL(fileSelected(const KFileViewItem*)),this,SLOT(fileSelected(const KFileViewItem*)));
-  statusBar()->hide();
 
-  sidebar->showPage(0);
+  statusBar()->hide();
 }
 
 bool KateMainWindow::eventFilter(QObject* o, QEvent* e)
